--- a/videos.html
+++ b/videos.html
@@ -26,9 +26,9 @@
     <h1 id="title">映像</h1>
     <p id="sbutitle">Video</p>
     <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">ホーム</a>
-        </li>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">ホーム</a>
+      </li>
     </ul>
     <ul class="nav justify-content-center">
       <li class="nav-item">
@@ -59,15 +59,9 @@
         </nav>
         <h2>映像分野</h2>
         <p>映像系の作品です。<br>
-        編集ソフトはPremierPro,DaVinci Resolve,AviUtlなどを使用しています。</p>
+          編集ソフトはPremierPro,DaVinci Resolve,AviUtlなどを使用しています。</p>
       </div>
     </div>
-    <!-- 上にスクロール -->
-    <p id="page-top">
-      <a href="#">
-        ∧
-      </a>
-    </p>
     <div class="card-container">
       <div class="cardVideo">
         <iframe src="https://www.youtube-nocookie.com/embed/VHumWN5DBN4" title="YouTube video player" frameborder="0"
@@ -78,7 +72,7 @@
         <h2>風船</h2>
         <p class="Dialog">2年前期｜CG応用演習A</p>
         <p class="Description">おじさんを除くキャラ、オブジェクトは、blenderで自身が製作したものです。<br>
-        等身の大きい女性のキャラは、1年次冬休み期間で初めてキャラモデリングを行った際に作ったキャラクターを使用しています。</p>
+          等身の大きい女性のキャラは、1年次冬休み期間で初めてキャラモデリングを行った際に作ったキャラクターを使用しています。</p>
         <p class="Use">使用ソフト｜blender,Unity3D
         </p>
       </div>
@@ -110,12 +104,24 @@
         <p class="Use">使用ソフト｜PremierPro</p>
       </div>
     </div>
-      <div class="topLink">
-        <p id="page-top-big">
-          <a href="#">ページ上部に戻る
-          </a>
-        </p>
+    <div class="menu-container">
+      <p class="menu-button">SELECT</p>
+      <div class="hover-menu">
+        <ul>
+          <li><a href="videos.html">映像</a></li>
+          <li><a href="interactive.html">インタラクティブ</a></li>
+          <li><a href="programming.html">プログラミング</a></li>
+          <li><a href="web.html">ウェブ</a></li>
+          <li><a href="others.html">その他</a></li>
+        </ul>
       </div>
+    </div>
+    <div class="topLink">
+      <p id="page-top">
+        <a href="#">ページ上部に戻る
+        </a>
+      </p>
+    </div>
   </main>
   <footer>
     <p>Copyright © i2224046 All rights reserved.｜<a class="forIndex" href="index.html">ホームに戻る</a></p>
