--- a/others.html
+++ b/others.html
@@ -61,12 +61,6 @@
         <p>インタラクティブメディア学科外の授業と、授業ではない部分での活動です。</p>
       </div>
     </div>
-    <!-- 上にスクロール -->
-    <p id="page-top">
-      <a href="#">
-        ∧
-      </a>
-    </p>
     <div class="card-container">
       <div class="cardImg">
         <img src="medias/nakanoFes2022.webp" alt="nakanoFes2022">
@@ -75,12 +69,14 @@
         <h2>中野祭企画展2022</h2>
         <p class="Dialog">1年後期｜小規模団体</p>
         <p class="Description">映像の展示を行った。</p>
-        <p class="Use">使用ソフト｜</p>
+        <p class="Use">使用ソフト｜none</p>
       </div>
     </div>
     <div class="card-container">
-      <div class="cardImg">
-        <img src="medias/" alt="animation">
+      <div class="cardVideo">
+        <iframe src="https://www.youtube-nocookie.com/embed/COUkTir72eo" title="YouTube video player" frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen></iframe>
       </div>
       <div class="cardComment">
         <h2>手書きアニメ</h2>
@@ -89,12 +85,24 @@
         <p class="Use">使用ソフト｜PremierePro,AviUtl</p>
       </div>
     </div>
-      <div class="topLink">
-        <p id="page-top-big">
-          <a href="#">ページ上部に戻る
-          </a>
-        </p>
+    <div class="menu-container">
+      <p class="menu-button">SELECT</p>
+      <div class="hover-menu">
+        <ul>
+          <li><a href="videos.html">映像</a></li>
+          <li><a href="interactive.html">インタラクティブ</a></li>
+          <li><a href="programming.html">プログラミング</a></li>
+          <li><a href="web.html">ウェブ</a></li>
+          <li><a href="others.html">その他</a></li>
+        </ul>
       </div>
+    </div>
+    <div class="topLink">
+      <p id="page-top">
+        <a href="#">ページ上部に戻る
+        </a>
+      </p>
+    </div>
   </main>
   <footer>
     <p>Copyright © i2224046 All rights reserved.｜<a class="forIndex" href="index.html">ホームに戻る</a></p>
