--- a/test.html
+++ b/test.html
@@ -2,10 +2,21 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>背景色の流れるホバーアニメーション</title>
-  <link rel="stylesheet" href="styles.css">
+  <title>ホバーメニュー</title>
+  <link rel="stylesheet" href="test.css">
 </head>
 <body>
-  <div class="flowing-bg">Hover Me</div>
+  <div class="menu-container">
+    <button class="menu-button">メニュー</button>
+    <div class="hover-menu">
+      <ul>
+        <li><a href="#">アイテム1</a></li>
+        <li><a href="#">アイテム2</a></li>
+        <li><a href="#">アイテム3</a></li>
+      </ul>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
