--- a/web.html
+++ b/web.html
@@ -26,14 +26,14 @@
     <h1 id="title">ウェブ</h1>
     <p id="sbutitle">Web</p>
     <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link" href="index.html">ホーム</a>
-        </li>
+      <li class="nav-item">
+        <a class="nav-link" href="index.html">ホーム</a>
+      </li>
     </ul>
     <ul class="nav justify-content-center">
-        <li class="nav-item">
-          <a class="nav-link" href="videos.html">映像</a>
-        </li>
+      <li class="nav-item">
+        <a class="nav-link" href="videos.html">映像</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="interactive.html">インタラクティブ</a>
       </li>
@@ -62,18 +62,12 @@
           VSCodeを使用し、htmlやcssを書いて制作したサイトと、figmaを使ったサイトの二種類があります。</p>
       </div>
     </div>
-    <!-- 上にスクロール -->
-    <p id="page-top">
-      <a href="#">
-        ∧
-      </a>
-    </p>
     <div class="card-container">
       <div class="cardVideo">
-        <img src="medias/web.webp" alt="programming">
+        <a class="imgLink" href="https://i2224046.github.io/Web2022" target="_blank"><img src="medias/web.avif" alt="programming"></a>
       </div>
       <div class="cardComment">
-        <h2>作品タイトル</h2>
+        <h2>IM演習にて作成したサイト</h2>
         <p class="Dialog">1年後期｜IM基礎演習</p>
         <p class="Description">演習前はhtmlしか書いたことがなかったが、演習でcssの基礎的な知識を学んだ上で作成したもの。</p>
         <p class="Use">使用ソフト｜VSCode</p>
@@ -81,7 +75,9 @@
     </div>
     <div class="card-container">
       <div class="cardFigma">
-        <iframe style="border: 1px solid rgba(30, 9, 85, 0);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FUH1BoV4j265zH2xfF26x5E%2Fi2224046%3Fnode-id%3D1-105%26starting-point-node-id%3D1%253A105%26mode%3Ddesign%26t%3Dt9zDWfmR16FAOMrw-1" allowfullscreen></iframe>
+        <iframe style="border: 1px solid rgba(30, 9, 85, 0);"
+          src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FUH1BoV4j265zH2xfF26x5E%2Fi2224046%3Fnode-id%3D1-105%26starting-point-node-id%3D1%253A105%26mode%3Ddesign%26t%3Dt9zDWfmR16FAOMrw-1"
+          allowfullscreen></iframe>
       </div>
       <div class="cardComment">
         <h2 class="Title">リゾートホテルの予約アプリ</h2>
@@ -91,8 +87,8 @@
       </div>
     </div>
     <div class="card-container">
-        <div class="cardVideo">
-          <a class="imgLink" href="index.html"><img src="medias/portfolio.webp" alt="programming"></a>
+      <div class="cardVideo">
+        <a class="imgLink" href="index.html"><img src="medias/portfolio.webp" alt="programming"></a>
       </div>
       <div class="cardComment">
         <h2 class="Title">ポートフォリオサイト</h2>
@@ -102,12 +98,24 @@
         <p class="Use">使用ソフト｜VSCode</p>
       </div>
     </div>
-      <div class="topLink">
-        <p id="page-top-big">
-          <a href="#">ページ上部に戻る
-          </a>
-        </p>
+    <div class="menu-container">
+      <p class="menu-button">SELECT</p>
+      <div class="hover-menu">
+        <ul>
+          <li><a href="videos.html">映像</a></li>
+          <li><a href="interactive.html">インタラクティブ</a></li>
+          <li><a href="programming.html">プログラミング</a></li>
+          <li><a href="web.html">ウェブ</a></li>
+          <li><a href="others.html">その他</a></li>
+        </ul>
       </div>
+    </div>
+    <div class="topLink">
+      <p id="page-top">
+        <a href="#">ページ上部に戻る
+        </a>
+      </p>
+    </div>
   </main>
   <footer>
     <p>Copyright © i2224046 All rights reserved.｜<a class="forIndex" href="index.html">ホームに戻る</a></p>
