--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <!--/splash-->
   </div>
   <div id="container">
-    <header>
+    <header id="Home">
       <h1 id="titleHome" class="animate__animated animate__fadeInDown">ポートフォリオ</h1>
       <p id="sbutitleHome">2224046 富田修平</p>
     </header>
@@ -83,7 +83,56 @@
             <p>そのほかです。</p>
           </div>
         </a>
-      </div>
+        <div class="glass-background">
+          <h3>このサイトについて</h3>
+          <p>大学内で製作した課題などを掲載しているサイトです。<br><br></p>
+          <h3>プロフィール</h3>
+          <table class="centered-table">
+            <tr>
+              <td>名前</td>
+              <td>富田修平</td>
+            </tr>
+            <tr>
+              <td>出身</td>
+              <td>静岡県</td>
+            </tr>
+            <tr>
+              <td>やってること</td>
+              <td>映像制作<br>3DCGモデリング</td>
+            </tr>
+            <tr>
+              <td>やったこと</td>
+              <td>電子工作<br>プログラミング<br>Web制作など</td>
+            </tr>
+            <tr>
+              <td>やりたいこと</td>
+              <td>本格的な実写合成映像制作<br>それなりの絵を描く<br>ちょっとした音楽制作</td>
+            </tr>
+          </table>
+          <h4><br><br>主要の使用ソフト・ツール</h4>
+          <table class="centered-table">
+            <tr>
+              <td>映像系</td>
+              <td>AviUtl<br>DaVinci Resolve<br>After Effects</td>
+            </tr>
+            <tr>
+              <td>3DCG系</td>
+              <td>Blender<br>Unity<br>Fusion</td>
+            </tr>
+            <tr>
+              <td>プログラミング系</td>
+              <td>Processing<br>micro:bit</td>
+            </tr>
+            <tr>
+              <td>Web系</td>
+              <td>Visual Studio Code<br>Figma</td>
+            </tr>
+            <tr>
+              <td>その他</td>
+              <td>Audacity<br>VOICEROID<br>A.I.VOICE<br>VOICEVOX<br>COEIROINK</td>
+            </tr>
+          </table>
+        </div>
     </main>
     <footer>
       <p>Copyright © i2224046 All rights reserved.</p>
