--- a/interactive.html
+++ b/interactive.html
@@ -112,7 +112,7 @@
         <p class="Dialog">1年後期｜デバイス演習Ⅰ</p>
         <p class="Description">SDカードをリーダーに差し込むと、映像がランダムで再生される。<br>
           マウスを分解し、スイッチをリーダーに埋め込んでおり、SDカードが差し込まれるとスイッチがオンになりマウスクリックと同じ動作を起こす仕組みになっている。</p>
-        <p class="Use">使用ソフト｜AdobeXD,DaVinci Resolve,Illustrator</p>
+        <p class="Use">使用ソフト｜AdobeXD,DaVinci Resolve,Illustrator,VOICEROID</p>
       </div>
     </div>
     <div class="card-container">
@@ -132,13 +132,14 @@
     <div class="card-container">
       <div class="cardVideo">
         <iframe id="webgl-frame"
-          src="https://40851.play.unityroom.com?expires=1690079419&amp;salt=123788405351995875784627312470804736878&amp;sig=bf81ff2e73ed86cadb798975209e3669179f1476"
+          src="https://40851.play.unityroom.com?expires=1690522378&amp;salt=66810715722775248699764384693767910793&amp;sig=9461e57343830d0cceb16152acfab106d83e7509"
           frameborder="0" scrolling="auto"></iframe>
       </div>
       <div class="cardComment">
         <h2 class="Title">何気ない日常？</h2>
         <p class="Dialog">2年前期｜インタラクション演習</p>
-        <p class="Description">画面を押すと再生されるループアニメーションのランダム再生。</p>
+        <p class="Description">画面を押すと再生されるループアニメーションのランダム再生。<br>
+        <a href="https://unityroom.com/games/2224046looprandominteraction">アクセスできない場合はこちら</a></p>
         <p class="Use">使用ソフト｜Unity2D</p>
       </div>
     </div>
