--- a/others.html
+++ b/others.html
@@ -68,7 +68,8 @@
       <div class="cardComment">
         <h2>中野祭企画展2022</h2>
         <p class="Dialog">1年後期｜小規模団体</p>
-        <p class="Description">映像の展示を行った。</p>
+        <p class="Description">映像の上映を行いました。<br>
+        </p>
         <p class="Use">使用ソフト｜none</p>
       </div>
     </div>
@@ -81,8 +82,8 @@
       <div class="cardComment">
         <h2>手書きアニメ</h2>
         <p class="Dialog">2年前期｜アニメーション工房</p>
-        <p class="Description">手書きアニメーションを製作した。</p>
-        <p class="Use">使用ソフト｜PremierePro,AviUtl</p>
+        <p class="Description">手書きアニメーションを製作しました。</p>
+        <p class="Use">使用ソフト｜PremierePro</p>
       </div>
     </div>
     <div class="menu-container">
