--- a/interactive.html
+++ b/interactive.html
@@ -139,7 +139,7 @@
         <h2 class="Title">何気ない日常？</h2>
         <p class="Dialog">2年前期｜インタラクション演習</p>
         <p class="Description">画面を押すと再生されるループアニメーションのランダム再生。<br>
-        <a href="https://unityroom.com/games/2224046looprandominteraction">アクセスできない場合はこちら</a></p>
+        <a href="https://unityroom.com/games/2224046looprandominteraction" target="_blank">アクセスできない場合はこちら</a></p>
         <p class="Use">使用ソフト｜Unity2D</p>
       </div>
     </div>
