--- a/web.html
+++ b/web.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <title>2224046ポートフォリオ｜映像</title>
+  <title>2224046ポートフォリオ｜ウェブ</title>
 
   <!--タイトルのアイコン-->
   <link rel="shortcut icon" href="medias/title.ico">
