--- a/others.html
+++ b/others.html
@@ -62,8 +62,31 @@
       </div>
     </div>
     <div class="card-container">
-      <div class="cardImg">
-        <img src="medias/nakanoFes2022.webp" alt="nakanoFes2022">
+      <div class="cardImg">  
+        <div class="slider-container">
+        <div class="slider">
+          <img src="medias/nakano2022/001.webp" alt="Image 1">
+          <img src="medias/nakano2022/002.webp" alt="Image 2">
+          <img src="medias/nakano2022/003.webp" alt="Image 3">
+          <img src="medias/nakano2022/004.webp" alt="Image 4">
+          <img src="medias/nakano2022/005.webp" alt="Image 5">
+          <img src="medias/nakano2022/006.webp" alt="Image 6">
+          <img src="medias/nakano2022/007.webp" alt="Image 7">
+          <img src="medias/nakano2022/008.webp" alt="Image 8">
+          <img src="medias/nakano2022/009.webp" alt="Image 9">
+          <img src="medias/nakano2022/010.webp" alt="Image 10">
+          <img src="medias/nakano2022/011.webp" alt="Image 11">
+          <img src="medias/nakano2022/012.webp" alt="Image 12">
+          <img src="medias/nakano2022/013.webp" alt="Image 13">
+          <img src="medias/nakano2022/014.webp" alt="Image 14">
+          <img src="medias/nakano2022/015.webp" alt="Image 15">
+          <img src="medias/nakano2022/016.webp" alt="Image 16">
+          <img src="medias/nakano2022/017.webp" alt="Image 17">
+          <!-- さらに追加の画像をここに追記 -->
+        </div>
+        <button class="prev-button">&lt;</button>
+        <button class="next-button">&gt;</button>
+      </div>
       </div>
       <div class="cardComment">
         <h2>中野祭企画展2022</h2>
@@ -112,6 +135,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/scroll.js"></script>
+  <script src="js/imgScroll.js"></script>
 </body>
 
 </html>
