--- a/others.html
+++ b/others.html
@@ -136,6 +136,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/scroll.js"></script>
   <script src="js/imgScroll.js"></script>
+  <script src="js/fade.js"></script>
 </body>
 
 </html>
