--- a/programming.html
+++ b/programming.html
@@ -116,7 +116,7 @@
                 <p class="Use">使用ソフト｜micro;bit</p>
             </div>
         </div>
-        <div class="menu-container">
+        <div class="menu-container" >
             <p class="menu-button">SELECT</p>
             <div class="hover-menu">
                 <ul>
@@ -142,6 +142,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/scroll.js"></script>
+    <script src="js/fade.js"></script>
 </body>
 
 </html>
