--- a/videos.html
+++ b/videos.html
@@ -130,6 +130,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/scroll.js"></script>
+  <script src="js/fade.js"></script>
 </body>
 
 </html>
