--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </video>
       </div>
       <!--カード-->
-      <div class="card-container">
+      <div class="card-container-home">
         <!--index用カード-->
         <a class="homeLink" href="videos.html">
           <div class="cardHome">
@@ -61,7 +61,7 @@
           </div>
         </a>
       </div>
-      <div class="card-container">
+      <div class="card-container-home">
         <a class="homeLink" href="programming.html">
           <div class="cardHome">
             <img class="homeImg" src="medias/programming.avif" alt="programming">
