--- a/programming.html
+++ b/programming.html
@@ -116,6 +116,29 @@
                 <p class="Use">使用ソフト｜micro;bit</p>
             </div>
         </div>
+        <div class="card-container">
+          <div class="cardImg">  
+            <div class="slider-container">
+            <div class="slider">
+              <img src="medias/PET001.avif" alt="Image 1">
+              <img src="medias/PET002.avif" alt="Image 2">
+              <img src="medias/PET003.avif" alt="Image 3">
+              <img src="medias/PET004.avif" alt="Image 4">
+              <img src="medias/PET005.avif" alt="Image 5">
+              <!-- さらに追加の画像をここに追記 -->
+            </div>
+            <button class="prev-button">&lt;</button>
+            <button class="next-button">&gt;</button>
+          </div>
+          </div>
+          <div class="cardComment">
+            <h2>ペットボトルウォーターサーバー</h2>
+            <p class="Dialog">2年前期｜デバイス演習Ⅱ</p>
+            <p class="Description">現在製作中のものです。<br>
+            </p>
+            <p class="Use">使用ソフト｜micro:bit,Fusion</p>
+          </div>
+        </div>
         <div class="menu-container" >
             <p class="menu-button">SELECT</p>
             <div class="hover-menu">
@@ -141,6 +164,7 @@
     <!--JS-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/imgScroll.js"></script>
     <script src="js/scroll.js"></script>
     <script src="js/fade.js"></script>
 </body>
