--- a/interactive.html
+++ b/interactive.html
@@ -29,8 +29,6 @@
       <li class="nav-item">
         <a class="nav-link" href="index.html">ホーム</a>
       </li>
-    </ul>
-    <ul class="nav justify-content-center">
       <li class="nav-item">
         <a class="nav-link" href="videos.html">映像</a>
       </li>
@@ -162,7 +160,7 @@
                       allowfullscreen></iframe>
           </div>
           <div class="cardComment">
-              <h2 class="Title">作品タイトル</h2>
+              <h2 class="Title">便利な自販機</h2>
               <p class="Dialog">2年前期｜インタラクション演習</p>
               <p class="Description">
                   A4横にイラストをプリントし、その紙に対して映像をマッピングする作品。<br>
