--- a/videos.html
+++ b/videos.html
@@ -23,19 +23,17 @@
 
 <body class="animate__animated animate__fadeIn">
   <header>
-    <h1 id="title">映像</h1>
-    <p id="sbutitle">Video</p>
+    <h1 id="title">インタラクティブ</h1>
+    <p id="sbutitle">Interactive</p>
     <ul class="nav justify-content-center">
       <li class="nav-item">
         <a class="nav-link" href="index.html">ホーム</a>
       </li>
-    </ul>
-    <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">映像</a>
+        <a class="nav-link" href="videos.html">映像</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="interactive.html">インタラクティブ</a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">インタラクティブ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="programming.html">プログラミング</a>
