--- a/web.html
+++ b/web.html
@@ -23,25 +23,23 @@
 
 <body class="animate__animated animate__fadeIn">
   <header>
-    <h1 id="title">ウェブ</h1>
-    <p id="sbutitle">Web</p>
+    <h1 id="title">インタラクティブ</h1>
+    <p id="sbutitle">Interactive</p>
     <ul class="nav justify-content-center">
       <li class="nav-item">
         <a class="nav-link" href="index.html">ホーム</a>
       </li>
-    </ul>
-    <ul class="nav justify-content-center">
       <li class="nav-item">
         <a class="nav-link" href="videos.html">映像</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="interactive.html">インタラクティブ</a>
+        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">インタラクティブ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="programming.html">プログラミング</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">ウェブ</a>
+        <a class="nav-link" href="web.html">ウェブ</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="others.html">その他</a>
