--- a/videos.html
+++ b/videos.html
@@ -23,8 +23,8 @@
 
 <body class="animate__animated animate__fadeIn">
   <header>
-    <h1 id="title">インタラクティブ</h1>
-    <p id="sbutitle">Interactive</p>
+    <h1 id="title">映像</h1>
+    <p id="sbutitle">Video</p>
     <ul class="nav justify-content-center">
       <li class="nav-item">
         <a class="nav-link" href="index.html">ホーム</a>
