--- a/others.html
+++ b/others.html
@@ -116,6 +116,7 @@
         </p>
         <p class="Use">使用ソフト｜none</p>
       </div>
+    </div>
       <div class="card-container">
         <div class="cardImg">
           <div class="slider-container" id="slider-container3">
@@ -138,6 +139,7 @@
           <p class="Use">使用ソフト｜none</p>
         </div>
       </div>
+    </div>
       <div class="card-container">
         <div class="cardImg">
           <div class="slider-container" id="slider-container4">
@@ -159,6 +161,7 @@
           <p class="Use">使用ソフト｜ClipSTUDIO,AviUtl</p>
         </div>
       </div>
+    </div>
       <div class="card-container">
         <div class="cardVideo">
           <iframe src="https://www.youtube-nocookie.com/embed/COUkTir72eo" title="YouTube video player" frameborder="0"
@@ -172,6 +175,7 @@
           <p class="Use">使用ソフト｜PremierePro</p>
         </div>
       </div>
+    </div>
       <div class="menu-container">
         <p class="menu-button">SELECT</p>
         <div class="hover-menu">
