--- a/videos.html
+++ b/videos.html
@@ -150,7 +150,7 @@
       </div>
       <div class="cardComment">
         <h2 class="Title">コインを拾う</h2>
-        <p class="Dialog">1年前期｜IM基礎演習</p>
+        <p class="Dialog">2年後期｜映像演習</p>
         <p class="Description">コインを拾うAとそれを見るBというお題の元作られた、グループ制作のショーと動画です。</p>
         <p class="Use">使用ソフト｜DaVinnchi Resolve,AviUtl</p>
       </div>
